--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
-body {
-  margin: 0;
+*,
+*::after,
+*::before{
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+}
+
+.image{
+  width: 10rem;
+}
+
+.flex-row{
+  display: flex;
 }
