--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,28 @@
     box-sizing: inherit;
 }
 
+body{
+  font-family: 'Lustria', serif;
+}
+
+/* welcome */
+
 .weclome__buttonGroup{
   display: flex;
   flex-direction: column;
+}
+
+.weclome__title{
+  font-size: 2.5rem;
+  margin-top: 1rem;
+  text-align: center;
+}
+
+/* apartment list */
+
+.apartmentList__title{
+  font-size: 2.5rem;
+  margin-top: 1rem;
 }
 
 .image{
